--- a/app/install/view/index/index.html
+++ b/app/install/view/index/index.html
@@ -5,7 +5,7 @@
         <h1>Diygw使用协议</h1>
     </div>
     <div class="m-body">
-        <p>版权完全遵循<a href="https://gitee.com/diygw/diygw-ui-php/blob/master/LICENSE" target="_blank">MIT开源协议</a>，以下为基于
+        <p>版权完全遵循<a href="https://gitee.com/diygw/diygw-ui-php/blob/master/LICENSE" target="_blank">Apache2开源协议</a>，以下为基于
             Diygw 的补充协议。</p>
 
         <p>为了保证您和他人的利益请遵循以下几条使用规则：</p>
@@ -27,7 +27,7 @@
 
         <p>8、如果您未能遵守本协议的条款3、条款4、条款5、条款6，您的免费使用授权将被终止，并将依法承担相应法律责任。</p>
 
-        <p><a href="https://www.diygw.com/35" target="_blank" style="color: red;font-size: 20px;">一键应用后台安装出错解决方案</a></p>
+        <p><a href="https://chat.diygw.com/thread/41" target="_blank" style="color: red;font-size: 20px;">一键应用后台安装出错解决方案</a></p>
     </div>
     <div class="m-foot">
         <a href="javascript:;" onclick="no()">不同意</a>
